// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when association extension has duplicate property name should have validation failure -> message 1`] = `"Association Extension EntityName redeclares property DuplicatePropertyName of base Association."`;

exports[`when association extension has duplicate property name should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 18,
  "tokenText": "bool",
}
`;

exports[`when association extension has multiple duplicates should have validation failure -> message 1`] = `"Association Extension EntityName redeclares property DuplicatePropertyName1 of base Association."`;

exports[`when association extension has multiple duplicates should have validation failure -> message 2`] = `"Association Extension EntityName redeclares property DuplicatePropertyName2 of base Association."`;

exports[`when association extension has multiple duplicates should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 22,
  "tokenText": "bool",
}
`;

exports[`when association extension has multiple duplicates should have validation failure -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 26,
  "tokenText": "bool",
}
`;
